fix(cart): adjust position of add-to-cart button for better alignment

--- a/css/Home-page.css
+++ b/css/Home-page.css
@@ -77,7 +77,7 @@
 
 .add-to-cart-btn {
   position: absolute;
-  bottom: 98px;
+  bottom: 100px;
   left: 0;
   width: 100%;
   height: 45px;
